@@ -7,6 +7,7 @@ Version 1.4.18 - SVN
   - Fix port detection in automatic base URL detection scheme
     (get_location()) (#2388423)
   - Add informational type option widget
+  - Add password type option widget
 
 Version 1.4.17 - 03 December 2008
 ---------------------------------
